integration-tests/tests/integration/snapshots/integration__show_config_test_groups.snap
---
source: integration-tests/tests/integration/main.rs
expression: default_profile_output.stdout_as_str()
snapshot_kind: text
---
group: flaky (max threads = 4)
    (no matches)
group: serial (max threads = 1)
    (no matches)
group: unused (max threads = 20)
    (no matches)
